force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Cadena__c.field-meta.xml
<CustomField>
    <fullName>Cadena__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadena</label>
    <referenceTo>Cadena__c</referenceTo>
    <relationshipLabel>Lineas Ordenes de Compra</relationshipLabel>
    <relationshipName>Lineas_Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>