force-app/main/default/objects/LineaOrdenDeCompra__c/fields/CantidadRecibida__c.field-meta.xml
<CustomField>
    <fullName>CantidadRecibida__c</fullName>
    <label>Cantidad Recibida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>