force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Campana__c</referenceTo>
    <relationshipLabel>Lineas Ordenes de Compra</relationshipLabel>
    <relationshipName>Lineas_Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>