force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <label>Detalle</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>