force-app/main/default/objects/LineaOrdenDeCompra__c/fields/PendienteRecibir__c.field-meta.xml
<CustomField>
    <fullName>PendienteRecibir__c</fullName>
    <formula>Cantidad__c -  CantidadRecibida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pendiente recibir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>