force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Lineas Ordenes de Compra</relationshipLabel>
    <relationshipName>Lineas_Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>