force-app/main/default/objects/LineaOrdenDeCompra__c/fields/RazonDiferencia__c.field-meta.xml
<CustomField>
    <fullName>RazonDiferencia__c</fullName>
    <label>Razón Diferencia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>