force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Sitio__c.field-meta.xml
<CustomField>
    <fullName>Sitio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sitio</label>
    <referenceTo>Sitio__c</referenceTo>
    <relationshipLabel>Lineas Ordenes de Compra</relationshipLabel>
    <relationshipName>Lineas_Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>