force-app/main/default/objects/LineaOrdenDeCompra__c/fields/UltimaCantidadRecibida__c.field-meta.xml
<CustomField>
    <fullName>UltimaCantidadRecibida__c</fullName>
    <label>Última Cantidad Recibida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>