force-app/main/default/objects/LineaOrdenDeCompra__c/fields/Venta__c.field-meta.xml
<CustomField>
    <fullName>Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venta</label>
    <referenceTo>Venta__c</referenceTo>
    <relationshipLabel>Lineas Ordenes de Compra</relationshipLabel>
    <relationshipName>Lineas_Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>